# rust_axum_service

./: .gitignore  Cargo.toml  README.md  README.mda  docker-compose.yml  dockerfile
backend/: dockerfile
backend/dev/: dockerfile
backend/k8s/: dockerfile
migrations/: 20240211150429_schema.sql  20240309161748_schema.sql
src/: main.rs
src/dao/: dao.rs
src/handlers/: handlers.rs  mod.rs  todo.rs
