[package]
name = "boraxpr"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
tokio = {version="1.28.2", features = ["full"]}
tracing = "0.1.40"
serde = { version = "1.0.196", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
tower-http = { version = "0.5.1", features = ["cors","trace"] }
dotenv = "0.15.0"
tower_governor = {version = "0.3.2" , features = ["tracing"]}
